# bnc-kb

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
bnc_kb/: cli.py  config.py  embeddings.py  ingestion.py  models.py
bnc_kb/api/: add.py  admin.py  app.py  auth.py  search.py
bnc_kb/db/: connection.py  migrate.py
bnc_kb/db/sql/: 0001_extensions.sql  0002_schema.sql  0003_seeds.sql  0004_rls_disabled.sql  0005_natural_keys.sql  0006_shaper_convergence.sql
bnc_kb/parser/: adoc.py  archive.py  dimensions.py  manifest.py  tree.py
bnc_kb/queries/: ingest.py  links.py  search.py  spec.py
docs/ingest-sample/: README.md  kb-manifest.yaml
docs/ingest-sample/requirements/business-fct-1/: business-rules.md  data-requirements.md  solution-requirements.md
docs/ingest-sample/requirements/business-fct-2/: business-rules.md  data-requirements.md  solution-requirements.md
docs/superpowers/plans/: 2026-06-09-bnc-kb-poc.md
docs/superpowers/specs/: 2026-06-09-bnc-kb-poc-design.md
metamodel/: bnc.metamodel.yaml
spec_ingestion/: __init__.py  cli.py  config.py  discovery.py  embedding.py  engine.py  extraction.py  incremental.py  lineage.py  metamodel.py  model.py  parsing.py  query.py  report.py  sinks.py  validation.py
tests/: conftest.py
tests/fixtures/sample-capability/: kb-manifest.yaml
tests/integration/: _corpus.py  test_api.py  test_ingest.py  test_merge.py  test_migrations.py  test_queries.py
tests/unit/: test_auth.py  test_config.py  test_embeddings.py  test_models.py  test_parser_units.py  test_tree.py
(+12 files in other folders)
