[project]
name = "bnc-kb"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.2",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "pgvector>=0.3",
]

[project.scripts]
bnc-kb-ingest = "bnc_kb.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
embed = ["sentence-transformers>=3", "torch"]

[tool.pytest.ini_options]
markers = ["integration: requires a running Postgres (see docker-compose.yml)"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bnc_kb*", "spec_ingestion*"]
